--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Raleway&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -6,8 +8,9 @@
 
 html,
 body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Raleway", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.7em;
+  letter-spacing: 0.75px;
 }
 
 a {
